# fluffy-computing-machine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: autoformat.yml  cpplint.yml  gtest.yml
app/: CMakeLists.txt  main.cpp
include/: config.hpp
include/controller/: config.hpp  controller.hpp
include/math/: constants.hpp  lcp.hpp  lp.hpp  optimization.hpp  qcp.hpp
include/model/: light.hpp  material.hpp  mesh.hpp  meshUtils.hpp  object.hpp  rayCaster.hpp  renderScene.hpp  scene.hpp
include/physics/: collision.hpp  physics.hpp
include/render/: GLMesh.hpp  GLPipeline.hpp  camera.hpp  globject.hpp  glscene.hpp  indexBuffer.hpp  input.hpp  model.hpp  render.hpp  render2d.hpp  renderMesh.hpp  renderObject.hpp  shader.hpp  shaderProgram.hpp  shaders.hpp  shadowMap.hpp  texture.hpp  vertexArray.hpp  vertexBuffer.hpp  vertexBufferLayout.hpp
include/server/: renderServer.hpp  server.hpp
include/utils/: colour.hpp  config.hpp  constants.hpp  eigen.hpp  glew.hpp  glfw.hpp  glm.hpp  image.hpp  pngwriter.hpp  sprite.hpp  stb_image.hpp  types.hpp  utils.hpp
scripts/: eigen.sh  format.sh  movie.sh
src/: CMakeLists.txt
src/controller/: CMakeLists.txt  controller.cpp
src/math/: CMakeLists.txt  lcp.cpp  lp.cpp  math.cpp  qcp.cpp
src/model/: CMakeLists.txt  camera.cpp  material.cpp  mesh.cpp  meshUtils.cpp  object.cpp  rayCaster.cpp  renderScene.cpp  scene.cpp
src/physics/: CMakeLists.txt  collision.cpp  physics.cpp
src/render/: CMakeLists.txt  GLMesh.cpp  GLPipeline.cpp  camera.cpp  globject.cpp  indexBuffer.cpp  input.cpp  render.cpp  render2d.cpp  shader.cpp  shaderProgram.cpp  shaders.cpp  shadowMap.cpp  texture.cpp  vertexArray.cpp  vertexBuffer.cpp  vertexBufferLayout.cpp
src/render/shaders/: default.frag  default.vert  depth.vert  old.frag  old.vert
src/server/: CMakeLists.txt  renderServer.cpp  server.cpp
src/utils/: CMakeLists.txt  colour.cpp  config.cpp  image.cpp  sprite.cpp  stb_image.cpp  utils.cpp
tests/: CMakeLists.txt  physics_test.cpp  solver_tests.cpp  tests.cpp
